# PPG-Frailty-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PPG_Analy_Visual_test.ipynb  README.md  Script_struc.txt  docker-compose.yml  funcs.py  ppg.py  pttppg_pipeline_v7.py  pyproject.toml  svm2_dataset_train.ipynb
Arc/: pttppg_dash.ipynb  svm_dataset_train.ipynb
models/: svm_motion_linear_20250922_075807.pkl  svm_motion_linear_20250922_084720.pkl  svm_motion_linear_20250922_091528.pkl  svm_motion_linear_20250929_090341.pkl  svm_motion_rbf_20250915_145445.pkl  svm_motion_rbf_20250922_015659.pkl  svm_motion_rbf_20250922_015726.pkl  svm_motion_rbf_20250922_015729.pkl  svm_motion_rbf_20250922_015742.pkl  svm_motion_rbf_20250922_015746.pkl  svm_motion_rbf_20250922_020307.pkl  svm_motion_rbf_20250922_020310.pkl  svm_motion_rbf_20250922_020313.pkl  svm_motion_rbf_20250922_020314.pkl  svm_motion_rbf_20250922_020318.pkl  svm_motion_rbf_20250922_020319.pkl  svm_motion_rbf_20250922_020328.pkl  svm_motion_rbf_20250922_020331.pkl  svm_motion_rbf_20250922_020334.pkl  svm_motion_rbf_20250922_020337.pkl  svm_motion_rbf_20250922_020339.pkl  svm_motion_rbf_20250922_020341.pkl  svm_motion_rbf_20250922_055421.pkl  svm_motion_rbf_20250922_055449.pkl  svm_motion_rbf_20250922_055454.pkl  svm_motion_rbf_20250922_063111.pkl  svm_motion_rbf_20250922_063335.pkl  svm_motion_rbf_20250922_063339.pkl  svm_motion_rbf_20250922_064643.pkl  svm_motion_rbf_20250922_065312.pkl  svm_motion_rbf_20250922_065336.pkl  svm_motion_rbf_20250922_065344.pkl  svm_motion_rbf_20250922_065459.pkl  (+616 more)
